packages/compiler/tests/fixtures/invalid/each-with-index.svelte
<script>
  let items = [
    { title: "A" },
  ];
</script>
<list>
  {#each items as item, i}
    <text>{item.title}</text>
  {/each}
</list>
